[package]
name = "texlab-completion"
version = "0.1.0"
authors = [
    "Eric Förster <efoerster@users.noreply.github.com>",
    "Patrick Förster <pfoerster@users.noreply.github.com>"]
edition = "2018"

[dependencies]
futures = "0.3"
futures-boxed = { path = "../futures_boxed" }
itertools = "0.8.2"
log = "0.4.6"
once_cell = "1.3.1"
regex = "1.3.4"
serde = { version = "1.0.104", features = ["derive", "rc"] }
serde_json = "1.0.48"
texlab-distro = { path = "../texlab_distro" }
texlab-protocol = { path = "../texlab_protocol" }
texlab-syntax = { path = "../texlab_syntax" }
texlab-workspace = { path = "../texlab_workspace" }
walkdir = "2"
