[package]
name = "texlab-completion"
version = "0.1.0"
authors = [
    "Eric Förster <efoerster@users.noreply.github.com>",
    "Patrick Förster <pfoerster@users.noreply.github.com>"]
edition = "2018"

[lib]
doctest = false

[dependencies]
futures = "0.3"
futures-boxed = { path = "../futures_boxed" }
itertools = "0.9"
log = "0.4"
once_cell = "1.3"
petgraph = { version = "0.5", features = ["serde-1"] }
regex = "1.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
texlab-components = { path = "../texlab_components" }
texlab-feature = { path = "../texlab_feature" }
texlab-protocol = { path = "../texlab_protocol" }
texlab-syntax = { path = "../texlab_syntax" }
tokio = { version = "0.2", features = ["full"] }

[dev-dependencies]
indoc = "0.3"
